--- a/index.html
+++ b/index.html
@@ -3,21 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>飞书打印 Demo</title>
+  <title>跳转中...</title>
   <style>
     body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, 'Microsoft Yahei', sans-serif; }
     #ephox-ui { padding: 20px; }
   </style>
-  <script src="https://cdn.jsdelivr.net/npm/tinymce-i18n@latest/zh_CN.js"></script>
+  <meta http-equiv="refresh" content="0; url=modules/tinymce/src/core/demo/html/tiny_demo.html">
 </head>
 <body>
-  <div id="ephox-ui"></div>
-  <script src="modules/tinymce/js/tinymce/tinymce.js"></script>
-  <script src="modules/tinymce/scratch/demos/core/demo.js"></script>
-  <script>
-    if (window.demos && typeof window.demos.TinyMceDemo === 'function') {
-      window.demos.TinyMceDemo();
-    }
-  </script>
+  <script>location.href = 'modules/tinymce/src/core/demo/html/tiny_demo.html';</script>
 </body>
 </html>
